--- a/src/main/resources/templates/calendars/index.html
+++ b/src/main/resources/templates/calendars/index.html
@@ -24,7 +24,8 @@
       <div th:each="day : ${weekDays}">
         <div class="item">
           <div class="date">
-            <span th:text="'/'"></span>
+            <!-- <span th:text="'/'"></span> -->
+            <span th:text="${day.month} + '/' + ${day.date}"></span>  <!--Issue5-->
           </div>
           <ul class="content">
             <li th:each="plan : ${day.plans}" class="plan-list">・<span th:text="${plan}"></span></li>
